Fix alignment bug

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -103,6 +103,7 @@ blockquote {
 }
 
 .fact {
+	vertical-align: top;
 	display: inline-block;
 	margin: 10px;
 	width: 140px;
